# platform-hardware-qcom-media

./: Android.mk  Makefile.am  NOTICE  configure.ac  product.mk  readme.txt
FpsEstimator/: InFpsEstimator.h
audio/: Android.mk
audio/mpq8064/: ALSAControl.cpp  ALSADevice.cpp  ALSAStreamOps.cpp  Android.mk  AudioBitstreamSM.cpp  AudioBroadcastStream.cpp  AudioHardwareALSA.cpp  AudioHardwareALSA.h  AudioPolicyManagerALSA.cpp  AudioPolicyManagerALSA.h  AudioSessionOut.cpp  AudioStreamInALSA.cpp  AudioStreamOutALSA.cpp  audio_hw_hal.cpp  audio_policy_hal.cpp
audio/msm7627_surf/: AudioHardware.cpp  AudioHardware.h  AudioPolicyManager.cpp  AudioPolicyManager.h  audio_hw_hal.cpp  audio_policy_hal.cpp
audio/msm7627a/: AudioHardware.cpp  AudioHardware.h  AudioPolicyManager.cpp  AudioPolicyManager.h  HardwarePinSwitching.c  audio_hw_hal.cpp  audio_policy_hal.cpp
audio/msm7630/: AudioHardware.cpp  AudioHardware.h  AudioPolicyManager.cpp  AudioPolicyManager.h  audio_hw_hal.cpp  audio_policy_hal.cpp
audio/msm8660/: AudioHardware.cpp  AudioHardware.h  AudioPolicyManager.cpp  AudioPolicyManager.h  audio_hw_hal.cpp  audio_policy_hal.cpp
camera-daemon/src/: Makefile.am  camera_factory.cpp  camera_virtual.cpp  camerad.json  camerad.json.h  fpv_h264.cpp  fpv_h264.h  fpv_server.cpp  fpv_server.h  qcamclient.cpp  qcamclient.h  qcamdaemon.cpp  qcamvid_session.cpp  qcamvid_session.h
camera-daemon/src/omx/: camera_component.cpp  camera_component.h  encoder_configure.cpp
camera-daemon/src/virtual/: camera_virtual.cpp
conf_files/bengal/: media_codecs_performance.xml  media_codecs_performance_scuba_v0.xml
conf_files/lito/: media_codecs_performance.xml
conf_files/msmnile/: media_codecs_performance.xml
conf_files/sm6150/: media_codecs_performance.xml
dashplayer/: DashCodec.cpp  DashPlayer.cpp  DashPlayer.h  DashPlayerDriver.cpp
hypv-intercept/: Makefile.am  hypv_debug.h  hypv_intercept.cpp  hypv_intercept.h
libI420colorconvert/: ColorConvert.cpp
libarbitrarybytes/: Makefile.am
libc2dcolorconvert/: Android.mk  C2DColorConverter.cpp  C2DColorConverter.h  C2DDownscaleTest.cpp  Makefile.am  c2d2.h
libplatformconfig/: ConfigParser.cpp  ConfigParser.h  ConfigStore.h  Makefile.am  PlatformConfig.cpp
libsidebandstreamhandle/: SidebandHandleBase.h
libstagefrighthw/: Android.mk  QComOMXMetadata.h  QComOMXPlugin.cpp
mm-core/: Android.mk  Makefile.am  configure.ac
mm-core/inc/: OMX_Audio.h  OMX_Component.h  OMX_IndexExt.h  OMX_QCOMExtns.h  OMX_Skype_VideoExtensions.h  OMX_Types.h  QCMediaDefs.h  QCMetaData.h  QOMX_AudioIndexExtensions.h  QOMX_FileFormatExtensions.h  QOMX_IVCommonExtensions.h  QOMX_VideoExtensions.h  qc_omx_msg.h
mm-core/omxcore/: Android.mk
mm-core/omxcore/inc/: OMX_QCOMExtns.h  qc_omx_msg.h
mm-core/src/7630/: qc_registry_table_android.c
mm-core/src/8084/: qc_registry_table.c  qc_registry_table_android.c
mm-core/src/8226/: qc_registry_table.c  qc_registry_table_android.c
mm-core/src/8610/: qc_registry_table_android.c
mm-core/src/8909/: registry_table.c  registry_table_android.c
mm-core/src/8937/: registry_table_android.c
mm-core/src/8952/: registry_table.c  registry_table_android.c
mm-core/src/8960/: qc_registry_table.c  qc_registry_table_android.c
mm-core/src/8974/: qc_registry_table.c  qc_registry_table_android.c
mm-core/src/common/: qc_omx_core.c  qc_omx_core.h
mm-core/src/msm8953/: registry_table_android.c
mm-core/src/msm8992/: registry_table.c  registry_table_android.c
mm-core/src/msm8994/: registry_table.c  registry_table_android.c
mm-core/src/msm8996/: registry_table.c  registry_table_android.c
mm-core/src/msm8998/: registry_table.c
mm-core/src/qcs605/: registry_table.c  registry_table_android.c
mm-core/src/sdm660/: registry_table_android.c
mm-core/src/sdm670/: registry_table_android.c
mm-core/src/thulium/: registry_table.c  registry_table_android.c
mm-video-v4l2/: Makefile.am
mm-video-v4l2/DivxDrmDecrypt/: Makefile.am
mm-video-v4l2/vidc/: Makefile.am
mm-video-v4l2/vidc/common/: Android.mk
mm-video-v4l2/vidc/common/inc/: extra_data_handler.h  omx_meta_mode.h  softwareColorConverter.h  vidc_color_converter.h  vidc_debug.h
mm-video-v4l2/vidc/common/src/: extra_data_handler.cpp  hypv_intercept.cpp  softwareColorConverter.cpp  vidc_color_converter.cpp  vidc_common.cpp  vidc_vendor_extensions.cpp
mm-video-v4l2/vidc/test/: msm_vidc_test.c
mm-video-v4l2/vidc/vdec/: Android.mk  Makefile.am
mm-video-v4l2/vidc/vdec/inc/: frameparser.h  h264_utils.h  hevc_utils.h  omx_swvdec.h  omx_swvdec_utils.h  omx_vdec.h  omx_vdec_hevc.h  omx_vdec_hevc_swvdec.h  ts_parser.h
mm-video-v4l2/vidc/vdec/src/: frameparser.cpp  h264_utils.cpp  hevc_utils.cpp  mp4_utils.cpp  omx_swvdec.cpp  omx_swvdec_utils.cpp  omx_vdec.cpp  ts_parser.cpp  (+6 more)
mm-video-v4l2/vidc/venc/: Android.mk  Makefile.am
mm-video-v4l2/vidc/venc/inc/: fb_test.h  omx_swvenc_hevc.h  omx_swvenc_mpeg4.h  omx_video_base.h  omx_video_common.h  omx_video_encoder.h  venc_util.h  video_encoder_device.h  video_encoder_device_v4l2.h
mm-video-v4l2/vidc/venc/src/: omx_swvenc_hevc.cpp  omx_swvenc_mpeg4.cpp  omx_video_base.cpp  omx_video_encoder.cpp  omx_video_extensions.hpp  video_encoder_device.cpp  video_encoder_device_v4l2.cpp  video_encoder_device_v4l2_params.cpp
mm-video-v4l2/vidc/venc/test/: camera_test.cpp  fb_test.c  venc_test.cpp  venc_util.c
mm-video/vidc/: Makefile.am
mm-video/vidc/vdec/: Android.mk  Makefile.am
mm-video/vidc/venc/: Android.mk  Makefile.am
mm-video/vidc/venc/inc/: camera_test.h  fb_test.h  omx_video_base.h  omx_video_common.h  omx_video_encoder.h  queue.h  venc_util.h  video_encoder_device.h  video_encoder_device_msm8974.h  video_encoder_device_v4l2.h  video_encoder_test.h
mm-video/vidc/venc/src/: omx_video_base.cpp  omx_video_encoder.cpp  video_encoder_device.cpp  video_encoder_device_msm8974.cpp  video_encoder_device_v4l2.cpp
mm-video/vidc/venc/test/: camera_test.cpp  fb_test.c  queue.c  venc_test.cpp  venc_util.c  video_encoder_test.c
tests/C2DColorConversion/: Android.mk  C2DColorConverterTest.cpp
videopp/: Android.mk
(+24 files in other folders)
