# Makefile.am - Automake script for mm-omxvideo
#
ACLOCAL_AMFLAGS = -I m4

# additional headers to be installed in sysroot
# It's being copied by the recipe now
#include_HEADERS = libstagefrighthw/QComOMXMetadata.h
#SUBDIRS = mm-core mm-video-v4l2/vidc/venc libc2dcolorconvert camera-daemon

SUBDIRS = mm-core mm-video-v4l2/vidc/venc libc2dcolorconvert
