AM_CPPFLAGS = -Iinc
AM_CPPFLAGS += -I../../mm-core/inc
AM_CPPFLAGS += -I../../mm-core/src/common

lib_LTLIBRARIES = libdivxdrmdecrypt.la
libdivxdrmdecrypt_la_SOURCES = src/DivXDrmDecrypt.cpp
#libdivxdrmdecrypt_la_CPPFLAGS = -Iinc
libdivxdrmdecrypt_la_LDLIBS = -ldl
libdivxdrmdecrypt_la_LDFLAGS = -shared

